--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+    margin: 0px;
+    padding: 0px;
+    font-family: "Roboto", sans-serif;
+}
+
+p {
+    font-size: 14px;
+    color: white;
+    margin: 0px;
+}
+
+i {
+    color: rgb(70, 70, 70);
+    font-size: 14px;
+}
