--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -2,26 +2,37 @@
   <table class="table">
     <thead>
       <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Apellidos</th>
-        <th scope="col">Identificación</th>
-        <th scope="col">Rol asociado</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Teléfono</th>
-        <th scope="col">Correo electrónico</th>
-        <th scope="col">Acción</th>
+        <th class="title" scope="col">Nombre</th>
+        <th class="title" scope="col">Apellidos</th>
+        <th class="title" scope="col">Identificación</th>
+        <th class="title" scope="col">Rol asociado</th>
+        <th class="title" scope="col">Estado</th>
+        <th class="title" scope="col">Teléfono</th>
+        <th class="title" scope="col">Correo electrónico</th>
+        <th class="title" scope="col">Acción</th>
       </tr>
     </thead>
     <tbody>
       <tr>
-        <td>Camilo Hernnado</td>
-        <td>Dvila Bonilla</td>
-        <td>1049643462</td>
-        <td>Administrador</td>
-        <td>Activo</td>
-        <td>3214314628</td>
-        <td>camilo7davila@gmail.com</td>
-        <td>Acciones</td>
+        <td class="info">Camilo Hernnado</td>
+        <td class="info">Dvila Bonilla</td>
+        <td class="info">1049643462</td>
+        <td class="info">Administrador</td>
+        <td class="info">Activo</td>
+        <td class="info">3214314628</td>
+        <td class="info">camilo7davila@gmail.com</td>
+        <td class="info">Acciones</td>
+      </tr>
+
+      <tr>
+        <td class="info">Camilo Hernnado</td>
+        <td class="info">Dvila Bonilla</td>
+        <td class="info">1049643462</td>
+        <td class="info">Administrador</td>
+        <td class="info">Activo</td>
+        <td class="info">3214314628</td>
+        <td class="info">camilo7davila@gmail.com</td>
+        <td class="info">Acciones</td>
       </tr>
     </tbody>
   </table>
