--- a/src/app/home/layout/layout.component.css
+++ b/src/app/home/layout/layout.component.css
@@ -11,6 +11,7 @@
     grid-template-columns: 300px calc(100vw - 300px);
     grid-template-rows: 10% 83% 7%;
     transition: width 1s;
+    position: relative;
 }
 
 .lessSideBar {
