--- a/src/styles.css
+++ b/src/styles.css
@@ -54,3 +54,9 @@ h5 {
     color: white;
     border: 1px solid #659d22;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
