--- a/src/app/home/users/users.component.html
+++ b/src/app/home/users/users.component.html
@@ -25,6 +25,7 @@
         >
         <app-table
           [clients]="clients"
+          [search]="search"
           (clientOutput)="editClient($event)"
         ></app-table>
         </div>
