--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -11,7 +11,10 @@
   <div class="container-right">
     <img src="../../../assets/images/profile.png" width="30" alt="profile-img">
     <p>Camilo Dávila</p>
-    <div class="selector">
+    <div 
+      class="selector"
+      (click)="logout()"
+    >
       <i class="fas fa-sign-out-alt"></i>
     </div>
   </div>
