--- a/src/app/home/users/users.component.html
+++ b/src/app/home/users/users.component.html
@@ -27,6 +27,7 @@
           [clients]="clients"
           [search]="search"
           (clientOutput)="editClient($event)"
+          (deleteClientOutput)="deleteClient($event)"
         ></app-table>
         </div>
       </div>
