--- a/src/app/shared/sidebar/sidebar.component.css
+++ b/src/app/shared/sidebar/sidebar.component.css
@@ -16,6 +16,7 @@ h3 {
 .container-top {
     display: flex;
     align-items: center;
+    padding-left: 10px;
 }
 
 .ballon {
@@ -34,6 +35,7 @@ hr {
     display: flex;
     align-items: center;
     height: 40px;
+    padding-left: 10px;
 }
 
 .container-item_icon {
@@ -49,4 +51,5 @@ i {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-left: 0px;
 }
