--- a/src/styles.css
+++ b/src/styles.css
@@ -60,3 +60,21 @@ input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
+
+.active-sidebar {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px !important;
+    outline: none;
+}
+
+.active-sidebar:focus{
+    outline: none;
+}
+
+button {
+    outline: none;
+}
+
+button:focus {
+    outline: none;
+}
