--- a/src/app/home/modal/modal.component.html
+++ b/src/app/home/modal/modal.component.html
@@ -164,7 +164,9 @@
 
                         <button 
                             class="btn btn-outline-primary btn-primary-outline-app"
-                            type="button" 
+                            type="button"
+                            (click)="reset()"
+                            *ngIf="!isThereClient"
                         >
                             Limpiar
                         </button>
